--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,31 +13,27 @@ env:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ 'macos-latest', 'ubuntu-latest', 'windows-latest' ]
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3.3.0
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Set up Java
-        uses: actions/setup-java@v3.10.0
+        uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
           java-version: 11
 
       - name: build
-        uses: gradle/gradle-build-action@v2.4.0
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: --full-stacktrace build
 
       - name: Upload reports
-        uses: actions/upload-artifact@v3.1.2
+        uses: actions/upload-artifact@v3
         with:
           name: 'reports-${{ matrix.os }}'
           path: '**/build/reports/**'
@@ -50,12 +46,12 @@ jobs:
     timeout-minutes: 60
 
     steps:
-      - uses: actions/checkout@v3.3.0
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
       - name: Set up Java
-        uses: actions/setup-java@v3.10.0
+        uses: actions/setup-java@v3
         with:
           distribution: 'adopt'
           java-version: 11
@@ -64,7 +60,7 @@ jobs:
         run: rm -rf docs
 
       - name: Format
-        uses: gradle/gradle-build-action@v2.4.0
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: :inikio-core:dokkaHtml
 
@@ -72,7 +68,7 @@ jobs:
         run: ./gradlew --stop
 
       - name: "Commit formatted files"
-        uses: stefanzweifel/git-auto-commit-action@v4.16.0
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Update documentation
           file_pattern: "docs/*"
